--- a/index.html
+++ b/index.html
@@ -3,45 +3,120 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Live Monthly Gantt</title>
+  <title>UDP Programme Comms Dashboard</title>
 
-  <!-- Frappe Gantt (stable UMD build) -->
+  <!-- Favicon (inline, no 404) -->
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='28' fill='%23ef4444'/%3E%3C/svg%3E"/>
+
+  <!-- Frappe Gantt UMD (stable) -->
   <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
   <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
 
   <!-- Supabase JS v2 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+  <!-- Optional: better typography -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    :root {
-      --bg: #0b0c10; --card: #111318; --muted: #9aa4b2; --text: #e8eef7;
-      --accent: #4f46e5; --ok: #22c55e; --warn: #f59e0b;
+    /* ===== Light theme: white, ash, beige, red ===== */
+    :root{
+      --page:#ffffff;         /* page background */
+      --ink:#111827;          /* main text */
+      --muted:#6b7280;        /* ash text */
+      --line:#e5e7eb;         /* subtle borders */
+      --card:#ffffff;         /* cards */
+      --shadow:0 8px 24px rgba(17,24,39,.06);
+
+      --ash:#6b7280;          /* Task */
+      --beige:#f5efe3;        /* Done */
+      --red:#ef4444;          /* In progress */
+
+      --bar:#d1d5db;          /* base bar */
+      --barStroke:#c4c9d4;
     }
+
     html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,"Noto Sans"}
-    .wrap{max-width:1100px;margin:24px auto;padding:0 16px}
-    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap}
-    .brand{display:flex;gap:10px;align-items:center}
-    .live-dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 1.8s infinite}
-    @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.5)}70%{box-shadow:0 0 0 10px rgba(34,197,94,0)}100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:14px}
+    body{
+      margin:0;background:var(--page);color:var(--ink);
+      font:14px/1.55 Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans";
+    }
+
+    /* Layout */
+    .wrap{max-width:1280px;margin:24px auto;padding:0 20px}
+    .topbar{
+      display:flex;gap:16px;align-items:center;justify-content:space-between;flex-wrap:wrap;
+      background:var(--card);border:1px solid var(--line);border-radius:14px;padding:14px 16px;box-shadow:var(--shadow)
+    }
+    .brand{display:flex;gap:12px;align-items:center}
+    .dot{width:10px;height:10px;border-radius:50%;background:var(--red);box-shadow:0 0 0 6px rgba(239,68,68,.12);animation:pulse 2s infinite}
+    @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(239,68,68,.35)}70%{box-shadow:0 0 0 12px rgba(239,68,68,0)}100%{box-shadow:0 0 0 0 rgba(239,68,68,0)}}
+    .title{font-weight:700;font-size:18px}
+    .sub{color:var(--muted);font-size:12px;margin-top:2px}
+
     .controls{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-    .controls>*{background:var(--card);color:var(--text);border:1px solid rgba(255,255,255,.1);border-radius:12px;padding:10px 12px}
-    .hint{color:var(--muted);font-size:12px}
-    #gantt{overflow:auto;background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:16px;min-height:420px}
-    .legend{display:flex;gap:16px;align-items:center;flex-wrap:wrap;color:var(--muted);font-size:12px;margin-top:8px}
-    .legend .sw{width:10px;height:10px;border-radius:3px;display:inline-block;margin-right:6px}
-    .err{background:#2a1313;color:#ffb4b4;padding:8px 10px;border-radius:8px;margin-top:10px;display:none;white-space:pre-wrap}
+    .controls>*{
+      background:#fff;color:var(--ink);border:1px solid var(--line);
+      border-radius:10px;padding:10px 12px;cursor:pointer;transition:transform .12s ease, box-shadow .12s ease
+    }
+    .controls>*:hover{transform:translateY(-1px);box-shadow:0 6px 18px rgba(17,24,39,.06)}
+    select,button{font:inherit}
+
+    .card{
+      background:var(--card);border:1px solid var(--line);border-radius:14px;margin-top:14px;padding:12px;
+      box-shadow:var(--shadow)
+    }
+
+    /* Gantt container */
+    #gantt{
+      background:#fff;border:1px solid var(--line);border-radius:12px;min-height:420px;overflow:auto;
+      transition:box-shadow .15s ease
+    }
+    #gantt:hover{box-shadow:0 10px 28px rgba(17,24,39,.06)}
+
+    /* Legend */
+    .legend{display:flex;gap:18px;align-items:center;flex-wrap:wrap;color:var(--muted);font-size:12px;margin:10px 6px}
+    .sw{width:12px;height:12px;border-radius:3px;display:inline-block;margin-right:6px;border:1px solid var(--line)}
+    .sw.ash{background:var(--ash)}
+    .sw.beige{background:var(--beige)}
+    .sw.red{background:var(--red)}
+
+    .hint{color:var(--muted);font-size:12px;margin:8px 6px 0}
+
+    /* Frappe Gantt color overrides (minimal, readable) */
+    .gantt .bar{ fill: var(--bar); stroke: var(--barStroke); transition: filter .12s ease }
+    .gantt .bar-wrapper:hover .bar{ filter: brightness(1.04) }
+    .gantt .bar-progress{ fill: var(--red) }            /* progress is red */
+    .gantt .bar.is-done{ fill: var(--beige) }           /* completed gets beige */
+    .gantt .bar.is-task{ fill: var(--ash) }             /* plain task (0%) is ash */
+    .gantt .bar-label{ fill: var(--ink) }
+
+    /* Mobile bottom-sheet for tap details */
+    .sheet{
+      position:fixed;left:0;right:0;bottom:16px;margin:0 auto;max-width:560px;background:#fff;border:1px solid var(--line);
+      border-radius:14px;box-shadow:0 18px 36px rgba(17,24,39,.12);padding:14px 16px;z-index:9999;display:none
+    }
+    .sheet h4{margin:0 28px 6px 0;font-size:16px;font-weight:600}
+    .sheet .meta{font-size:12px;color:var(--muted);margin-bottom:6px}
+    .sheet .notes{font-size:13px;color:#374151}
+    .sheet .x{position:absolute;right:10px;top:8px;background:transparent;border:0;font-size:20px;color:#6b7280;cursor:pointer}
+
+    /* Better touch */
+    #gantt svg{ touch-action: pan-x pan-y }
+    #gantt svg .bar{ pointer-events: auto; stroke-width: 5 }
+
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="topbar">
       <div class="brand">
-        <div class="live-dot" title="Realtime connected"></div>
+        <div class="dot" title="Realtime connected"></div>
         <div>
-          <div style="font-weight:600">Live Monthly Gantt</div>
-          <div class="hint">Share this link to show updates instantly</div>
+          <div class="title">UDP Programme Comms Dashboard</div>
+          <div class="sub">Comms Focal: Abu Nayeem Md Shakib</div>
         </div>
       </div>
       <div class="controls">
@@ -49,35 +124,37 @@
         <button id="viewDay">Day</button>
         <button id="viewWeek">Week</button>
         <button id="viewMonth">Month</button>
-        <button id="refreshBtn" title="Force refresh">Refresh</button>
+        <button id="refreshBtn" title="Refresh data">Refresh</button>
       </div>
     </div>
 
-    <div class="card" style="margin-top:12px">
+    <div class="card">
       <div id="gantt"></div>
       <div class="legend">
-        <span><span class="sw" style="background:#4f46e5"></span>Task</span>
-        <span><span class="sw" style="background:#22c55e"></span>Done</span>
-        <span><span class="sw" style="background:#f59e0b"></span>In progress</span>
+        <span><span class="sw ash"></span>Task</span>
+        <span><span class="sw beige"></span>Done</span>
+        <span><span class="sw red"></span>In progress</span>
       </div>
-      <div class="hint" style="margin-top:8px">Times show in your device timezone. For Dhaka, set Asia/Dhaka.</div>
-      <div id="err" class="err"></div>
-    </div>
-
-    <div class="hint" style="margin-top:14px">
-      Tip: update tasks in Supabase. Everyone viewing this page will see the changes live.
+      <div class="hint">Tap or hover a bar to see details. Times shown in your timezone.</div>
     </div>
   </div>
 
+  <!-- Mobile sheet -->
+  <div class="sheet" id="sheet">
+    <button class="x" aria-label="Close">×</button>
+    <h4 id="sTitle"></h4>
+    <div class="meta" id="sDates"></div>
+    <div class="notes" id="sNotes"></div>
+  </div>
+
   <script>
-    // 1) Supabase credentials — URL must start with https://
-    const SUPABASE_URL = "https://wjfgntocqjtwaqam1bgc.supabase.co";
+    /* ===== Your Supabase project (given by you) ===== */
+    const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
 
-    // 2) Connect Supabase
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // 3) Page state
+    /* ===== Page state ===== */
     const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
     const monthSelect = document.getElementById('monthSelect');
     const btnDay = document.getElementById('viewDay');
@@ -85,34 +162,42 @@
     const btnMonth = document.getElementById('viewMonth');
     const refreshBtn = document.getElementById('refreshBtn');
     const ganttEl = document.getElementById('gantt');
-    const errEl = document.getElementById('err');
+    const sheet = document.getElementById('sheet');
+    const sTitle = document.getElementById('sTitle');
+    const sDates = document.getElementById('sDates');
+    const sNotes = document.getElementById('sNotes');
     let gantt;
 
-    // 4) Init
     init();
 
     async function init(){
       buildMonthPicker();
       await render();
       subscribeRealtime();
-      hookControls();
+      bindControls();
     }
 
-    function hookControls(){
-      btnDay.onclick = () => setView('Day');
-      btnWeek.onclick = () => setView('Week');
+    function bindControls(){
+      btnDay.onclick   = () => setView('Day');
+      btnWeek.onclick  = () => setView('Week');
       btnMonth.onclick = () => setView('Month');
       refreshBtn.onclick = () => render();
       monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
+
+      sheet.querySelector('.x').onclick = () => sheet.style.display = 'none';
+      document.addEventListener('click', (e)=>{
+        if(sheet.style.display==='none') return;
+        if(!sheet.contains(e.target) && !e.target.closest('.bar-wrapper')) sheet.style.display='none';
+      });
     }
 
     function setView(v){ state.view = v; if(gantt) gantt.change_view_mode(v); }
 
-    // 5) Month picker
+    /* ===== Month picker ===== */
     function buildMonthPicker(){
       monthSelect.innerHTML = '';
       const base = new Date(); base.setDate(1);
-      for(let o=-2;o<=9;o++){
+      for(let o=-2; o<=9; o++){
         const d = new Date(base); d.setMonth(d.getMonth()+o);
         const key = keyFromDate(d);
         const opt = document.createElement('option');
@@ -130,33 +215,20 @@
       return { start, end };
     }
 
-    // 6) Data
+    /* ===== Data ===== */
     async function fetchTasks(){
-      try {
-        const { data, error } = await supabase
-          .from('tasks')
-          .select('*')
-          .order('start_date', { ascending: true });
-        if (error) throw error;
+      const { data, error } = await supabase.from('tasks').select('*').order('start_date', { ascending: true });
+      if(error){ console.error(error); return []; }
 
-        const { start, end } = monthRangeFromKey(state.monthKey);
-        return (data || []).filter(t => {
-          const s = new Date(t.start_date);
-          const e = new Date(t.end_date || t.start_date);
-          return e >= start && s <= end;
-        });
-      } catch (e) {
-        showErr(
-          `Failed to fetch from Supabase.\n` +
-          `• Message: ${e.message || String(e)}\n` +
-          `• Check URL, anon key, API > Exposed schemas includes 'public', and Auth > URL Configuration has your GitHub Pages origin.`
-        );
-        console.error(e);
-        return [];
-      }
+      const { start, end } = monthRangeFromKey(state.monthKey);
+      return (data || []).filter(t => {
+        const s = new Date(t.start_date);
+        const e = new Date(t.end_date || t.start_date);
+        return e >= start && s <= end;
+      });
     }
 
-    // 7) Render Gantt
+    /* ===== Render ===== */
     async function render(){
       const rows = await fetchTasks();
       const tasks = rows.map(r => ({
@@ -166,44 +238,64 @@
         end: toYMD(r.end_date || r.start_date),
         progress: Number(r.progress || 0),
         dependencies: (r.dependencies || '').trim(),
-        custom_class: progressClass(Number(r.progress || 0))
+        notes: r.notes || '',
+        custom_class: (
+          Number(r.progress||0) >= 100 ? 'is-done' :
+          Number(r.progress||0) === 0 ? 'is-task' : 'is-doing'
+        )
       }));
 
+      window.__TASKS_BY_ID__ = Object.fromEntries(tasks.map(t => [String(t.id), t]));
+
       ganttEl.innerHTML = '';
-      // Gantt constructor is provided by frappe-gantt UMD build
       gantt = new Gantt('#gantt', tasks, {
         view_mode: state.view,
         date_format: 'YYYY-MM-DD',
         language: 'en',
-        custom_popup_html: task => `
-          <div class="details-container">
-            <div style="font-weight:600">${escapeHtml(task.name)}</div>
-            <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
+        custom_popup_html: t => `
+          <div style="max-width:260px">
+            <div style="font-weight:600">${escapeHtml(t.name)}</div>
+            <div style="color:var(--muted);font-size:12px">${t._start.format('ll')} → ${t._end.format('ll')} · ${t.progress}%</div>
+            ${t.notes ? `<div style="margin-top:4px;font-size:12px;color:#374151">${escapeHtml(t.notes)}</div>` : ''}
           </div>`
       });
+
+      bindMobileTap(); // keep after each render
     }
 
-    // 8) Realtime refresh
+    /* ===== Mobile tap sheet (delegation) ===== */
+    function bindMobileTap(){
+      if (window.__tapHandler__) {
+        ganttEl.removeEventListener('click', window.__tapHandler__);
+        ganttEl.removeEventListener('pointerup', window.__tapHandler__, true);
+      }
+      window.__tapHandler__ = (e)=>{
+        const group = e.target.closest && e.target.closest('.bar-wrapper');
+        if(!group) return;
+        const id = group.getAttribute('data-id');
+        const t = window.__TASKS_BY_ID__?.[id];
+        if(!t) return;
+        const s = new Date(t.start), ed = new Date(t.end);
+        sTitle.textContent = t.name;
+        sDates.textContent = `${s.toLocaleDateString()} → ${ed.toLocaleDateString()} • ${t.progress|0}%`;
+        sNotes.textContent = t.notes || '';
+        sheet.style.display = 'block';
+      };
+      ganttEl.addEventListener('click', window.__tapHandler__);
+      ganttEl.addEventListener('pointerup', window.__tapHandler__, true);
+    }
+
+    /* ===== Realtime ===== */
     function subscribeRealtime(){
       supabase.channel('public:tasks')
-        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(async () => {
-          await render();
-        }, 400))
+        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(() => render(), 300))
         .subscribe();
     }
 
-    // helpers
-    function progressClass(p){ const base='gantt-task'; return `${base} ${p>=100?'is-done':p>0?'is-doing':'is-todo'}`; }
-    function toYMD(d){ const x=new Date(d); const y=x.getFullYear(), m=String(x.getMonth()+1).padStart(2,'0'), dd=String(x.getDate()).padStart(2,'0'); return `${y}-${m}-${dd}`; }
+    /* ===== Helpers ===== */
+    function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
+    function escapeHtml(s){ return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c])); }
     function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); } }
-    function escapeHtml(s){ return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[c])); }
-    function showErr(msg){ errEl.style.display='block'; errEl.textContent = msg; }
   </script>
-
-  <style>
-    .gantt .bar.is-done { opacity: .8; }
-    .gantt .bar.is-doing { filter: saturate(1.2); }
-    .gantt .bar.is-todo { opacity: .9; }
-  </style>
 </body>
 </html>
